new proj/src/objects/Business_Tier_Object__c.object
<CustomObject>
    <fields>
        <fullName>Business_Tier_11__c</fullName>
        <label>Business - Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Tier_2__c</fullName>
        <label>Business - Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Tier_3__c</fullName>
        <label>Business - Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Yes_No__c</fullName>
        <label>Default? Yes?No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Live_Yes_No__c</fullName>
        <label>ERP Live? Yes/No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Business_Tier_Relation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Tier</label>
        <referenceTo>GE_HQ_P_L__c</referenceTo>
        <relationshipLabel>BusinessTierSubscribedObject</relationshipLabel>
        <relationshipName>BusinessTierSubscribedObject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KYCLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KYC</label>
        <referenceTo>GE_PRM_KYC_Termination_Checklist__c</referenceTo>
        <relationshipName>BusinessTierObject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEGACY_SYSTEM__c</fullName>
        <label>LEGACY SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORG_ID__c</fullName>
        <label>ORG ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORG_NAME__c</fullName>
        <label>ORG NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_ORACLE__c</fullName>
        <label>SAP/ORACLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier1__c</fullName>
        <label>Tier1</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier2__c</fullName>
        <label>Tier2</label>
        <picklist>
            <controllingField>Tier1__c</controllingField>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier3__c</fullName>
        <label>Tier3</label>
        <picklist>
            <controllingField>Tier2__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wayne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS) Multi P&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Services (MS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Services (TS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Subsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Well Stream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BusinessTierToSubscribedObject</label>
    <nameField>
        <label>BusinessTierToSubscribedObject  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BusinessTierSubscribedObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>